Correction d'un bug d'affichage sur les cartes en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -389,16 +389,17 @@ main {
 }
 .hosts_card {
        display: block;
+       width: 100%;
        max-width: 500px;
        height: 180px;
        border-radius: 13px;
-       margin: 0 auto 15px auto;
+       margin: 0 auto;
        box-shadow: 0 8px 15px #00000020;
        background-color: #fff;
        padding:5px;
 }
 .hosts_img {
-      width: 100%;
+       width: 100%;
        height: 60%;
        object-fit: cover;
        border-radius: 13px 13px 0 0;
